:bug: fix: add media query to avoid unaligned pictures bellow 1440px

--- a/exercicios-css-avancado/exercicio-lista-de-imagens/src/css/responsive.css
+++ b/exercicios-css-avancado/exercicio-lista-de-imagens/src/css/responsive.css
@@ -4,3 +4,9 @@
         flex-direction: column;
     }
 }
+
+@media(max-width: 1440px){
+    .pictures {
+        width: 900px;
+    }
+}
